--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -100,6 +100,10 @@ ion-badge {
               width: 100%; 
               height: 200px;
           }
+          video {
+            width: 100%; 
+            height: 200px;
+          }
       }
       // LIKE COMMENT AND SHARE
       .like-comment-share {
