--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -24,7 +24,7 @@
 
 
     <div style="margin-right: 15px; margin-left: 15px;">
-        <ion-card *ngFor="let item of notices"  [ngClass]="{'unread': item.status == 'unread'}">
+        <ion-card *ngFor="let item of notices"  [ngClass]="{'unread': item.status == 'unread'}" (click)="viewNotice(item)">
             <div style="margin-left: 15px; margin-top: 10px;">
                     <img src="../../assets/images/icon.png" style="width: 30px; height: 30px;">
             </div>
