--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -264,7 +264,7 @@
                             placeholder="Enter Product Unit" required></ion-input>
                     </ion-item>
                     <ion-item no-padding>
-                        <ion-input style="font-size: 13px; color: #737373;" type="text" formControlName="currentprice"
+                        <ion-input style="font-size: 13px; color: #737373;" type="number" formControlName="currentprice"
                             placeholder="Enter Product Price" required></ion-input>
                     </ion-item>
                     <ion-item no-padding>
